Fix link data-more order whit icon, anchor link if start with /#, bg color of card box and box align

--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -298,6 +298,7 @@ pre {
   position: relative;
   &::before {
     content: attr(data-more);
+    order: 1;
   }
   i {
     @include ofuscate;
